modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/bad_continue_in_lambda.gd
func test():
	for index in range(0, 1):
		var lambda := func():
			continue
	print('not ok')
